--- a/front-end/src/components/Categories/index.scss
+++ b/front-end/src/components/Categories/index.scss
@@ -24,6 +24,12 @@
         position: relative;
         overflow: hidden;
 
+        span {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         img {
             width: 100%;
             height: 100%;
