--- a/front-end/src/components/Footer/index.scss
+++ b/front-end/src/components/Footer/index.scss
@@ -33,6 +33,7 @@
 
             span {
                 color: gray;
+                font-weight: 100;
             }
         }
     }
@@ -58,7 +59,7 @@
             .copyright {
                 margin-left: 20px;
                 font-size: 12px;
-                // color: #e4e4e4;
+                font-weight: 100;
                 color: gray;
             }
         }
