--- a/front-end/src/components/Team/index.scss
+++ b/front-end/src/components/Team/index.scss
@@ -23,7 +23,7 @@
         .card {
             display: flex;
             flex-direction: column;
-            align-items: start;
+            align-items: flex-start;
             width: 18.75rem;
 
             img {
