--- a/front-end/src/pages/Product/index.scss
+++ b/front-end/src/pages/Product/index.scss
@@ -83,6 +83,11 @@
             font-weight: 500;
         }
 
+        .disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
         .links {
             display: flex;
             gap: 20px;
