--- a/front-end/src/components/Cart/index.scss
+++ b/front-end/src/components/Cart/index.scss
@@ -7,8 +7,8 @@
     z-index: 999;
     background-color: white;
     padding: 20px;
-    -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
 
 
     h1 {
@@ -63,7 +63,7 @@
         margin-bottom: 20px;
     }
 
-    button {
+    .button {
         width: 250px;
         padding: 10px;
         display: flex;
@@ -76,6 +76,11 @@
         color: white;
         font-weight: 500;
         margin-bottom: 20px;
+    }
+
+    .disabled-button {
+        opacity: 60%;
+        cursor: not-allowed!important;
     }
 
     .reset {
