--- a/front-end/src/pages/Products/index.scss
+++ b/front-end/src/pages/Products/index.scss
@@ -105,10 +105,19 @@
                 }
 
                 .price-range {
+                    display: -webkit-box;
+                    display: -ms-flexbox;
                     display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: center;
+                    -webkit-box-orient: vertical;
+                    -webkit-box-direction: normal;
+                        -ms-flex-direction: column;
+                            flex-direction: column;
+                    -webkit-box-align: center;
+                        -ms-flex-align: center;
+                            align-items: center;
+                    -webkit-box-pack: center;
+                        -ms-flex-pack: center;
+                            justify-content: center;
                     gap: 10px;
                     margin: 30px;
 
@@ -129,7 +138,8 @@
                             border-radius: 50%;
                             background: #ffffff;
                             margin-top: -5px;
-                            box-shadow: 1px 1px 2px rgba(#000, 0.5);
+                            -webkit-box-shadow: 1px 1px 2px rgba(#000, 0.5);
+                                    box-shadow: 1px 1px 2px rgba(#000, 0.5);
 
                             cursor: pointer;
 
@@ -140,6 +150,8 @@
                             height: 9px;
                             background: #bdbdbd;
                             border-radius: 3rem;
+
+                            -webkit-transition: all 0.5s;
 
                             transition: all 0.5s;
                             cursor: pointer;
@@ -155,6 +167,8 @@
                             width: 60%;
                             cursor: pointer;
                             height: 9px;
+
+                            -ms-transition: all 0.5s;
 
                             transition: all 0.5s;
                             /* Hides the slider so custom styles can be added */
@@ -210,6 +224,8 @@
                             background: #bdbdbd;
                             border-radius: 3rem;
 
+                            -moz-transition: all 0.5s;
+
                             transition: all 0.5s;
                             cursor: pointer;
                         }
@@ -218,8 +234,6 @@
                             background: $main-color;
                         }
                     }
-
-                    span {}
                 }
 
                 .sort-by {
