--- a/front-end/src/pages/Home/index.scss
+++ b/front-end/src/pages/Home/index.scss
@@ -1,1 +1,55 @@
 @import '../../variables.scss';
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    .top {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 10rem;
+
+        h2 {
+            color: $main-color;
+        }
+
+        .close {
+            filter: grayscale(1);
+            border: none;
+            background: none;
+            position: absolute;
+            top: 15px;
+            right: 10px;
+            transition: ease filter, transform 0.3s;
+            cursor: pointer;
+            transform-origin: center;
+
+            &:hover {
+                filter: grayscale(0);
+                transform: scale(1.1);
+            }
+        }
+    }
+
+    hr {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .bottom {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
